// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`K9BucketPolicy - IAccessSpec with set of capabilities 1`] = `
Object {
  "Resources": Object {
    "S3BucketMultiAccessSpecPolicyE07423DB": Object {
      "Properties": Object {
        "Bucket": Object {
          "Ref": "TestBucketWithMultiAccessSpec04AA3BA7",
        },
        "PolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": Array [
                "s3:DeleteBucket",
                "s3:DeleteBucketPolicy",
                "s3:DeleteBucketWebsite",
                "s3:ObjectOwnerOverrideToBucketOwner",
                "s3:PutAccelerateConfiguration",
                "s3:PutAnalyticsConfiguration",
                "s3:PutBucketAcl",
                "s3:PutBucketCORS",
                "s3:PutBucketLogging",
                "s3:PutBucketNotification",
                "s3:PutBucketObjectLockConfiguration",
                "s3:PutBucketOwnershipControls",
                "s3:PutBucketPolicy",
                "s3:PutBucketPublicAccessBlock",
                "s3:PutBucketRequestPayment",
                "s3:PutBucketTagging",
                "s3:PutBucketVersioning",
                "s3:PutBucketWebsite",
                "s3:PutEncryptionConfiguration",
                "s3:PutIntelligentTieringConfiguration",
                "s3:PutInventoryConfiguration",
                "s3:PutLifecycleConfiguration",
                "s3:PutMetricsConfiguration",
                "s3:PutObjectAcl",
                "s3:PutObjectLegalHold",
                "s3:PutObjectRetention",
                "s3:PutObjectVersionAcl",
                "s3:PutReplicationConfiguration",
              ],
              "Condition": Object {
                "ArnEquals": Object {
                  "aws:PrincipalArn": Array [
                    "arn:aws:iam::139710491120:user/ci",
                  ],
                },
              },
              "Effect": "Allow",
              "Principal": Object {
                "AWS": "*",
              },
              "Resource": Array [
                Object {
                  "Fn::GetAtt": Array [
                    "TestBucketWithMultiAccessSpec04AA3BA7",
                    "Arn",
                  ],
                },
                Object {
                  "Fn::Join": Array [
                    "",
                    Array [
                      Object {
                        "Fn::GetAtt": Array [
                          "TestBucketWithMultiAccessSpec04AA3BA7",
                          "Arn",
                        ],
                      },
                      "/*",
                    ],
                  ],
                },
              ],
              "Sid": "Allow Restricted administer-resource",
            },
            Object {
              "Action": Array [
                "s3:GetAccelerateConfiguration",
                "s3:GetAnalyticsConfiguration",
                "s3:GetBucketAcl",
                "s3:GetBucketCORS",
                "s3:GetBucketLocation",
                "s3:GetBucketLogging",
                "s3:GetBucketNotification",
                "s3:GetBucketObjectLockConfiguration",
                "s3:GetBucketOwnershipControls",
                "s3:GetBucketPolicy",
                "s3:GetBucketPolicyStatus",
                "s3:GetBucketPublicAccessBlock",
                "s3:GetBucketRequestPayment",
                "s3:GetBucketTagging",
                "s3:GetBucketVersioning",
                "s3:GetBucketWebsite",
                "s3:GetEncryptionConfiguration",
                "s3:GetIntelligentTieringConfiguration",
                "s3:GetInventoryConfiguration",
                "s3:GetLifecycleConfiguration",
                "s3:GetMetricsConfiguration",
                "s3:GetObjectAcl",
                "s3:GetObjectAttributes",
                "s3:GetObjectLegalHold",
                "s3:GetObjectRetention",
                "s3:GetObjectTagging",
                "s3:GetObjectVersionAcl",
                "s3:GetObjectVersionAttributes",
                "s3:GetObjectVersionTagging",
                "s3:GetReplicationConfiguration",
                "s3:ListBucketMultipartUploads",
                "s3:ListBucketVersions",
                "s3:ListMultipartUploadParts",
              ],
              "Condition": Object {
                "ArnEquals": Object {
                  "aws:PrincipalArn": Array [
                    "arn:aws:iam::139710491120:user/ci",
                  ],
                },
              },
              "Effect": "Allow",
              "Principal": Object {
                "AWS": "*",
              },
              "Resource": Array [
                Object {
                  "Fn::GetAtt": Array [
                    "TestBucketWithMultiAccessSpec04AA3BA7",
                    "Arn",
                  ],
                },
                Object {
                  "Fn::Join": Array [
                    "",
                    Array [
                      Object {
                        "Fn::GetAtt": Array [
                          "TestBucketWithMultiAccessSpec04AA3BA7",
                          "Arn",
                        ],
                      },
                      "/*",
                    ],
                  ],
                },
              ],
              "Sid": "Allow Restricted read-config",
            },
            Object {
              "Action": Array [
                "s3:GetObject",
                "s3:GetObjectTorrent",
                "s3:GetObjectVersion",
                "s3:GetObjectVersionForReplication",
                "s3:GetObjectVersionTorrent",
                "s3:ListBucket",
              ],
              "Condition": Object {
                "ArnEquals": Object {
                  "aws:PrincipalArn": Array [
                    "arn:aws:iam::123456789012:role/app-backend",
                  ],
                },
              },
              "Effect": "Allow",
              "Principal": Object {
                "AWS": "*",
              },
              "Resource": Array [
                Object {
                  "Fn::GetAtt": Array [
                    "TestBucketWithMultiAccessSpec04AA3BA7",
                    "Arn",
                  ],
                },
                Object {
                  "Fn::Join": Array [
                    "",
                    Array [
                      Object {
                        "Fn::GetAtt": Array [
                          "TestBucketWithMultiAccessSpec04AA3BA7",
                          "Arn",
                        ],
                      },
                      "/*",
                    ],
                  ],
                },
              ],
              "Sid": "Allow Restricted read-data",
            },
            Object {
              "Action": Array [
                "s3:AbortMultipartUpload",
                "s3:InitiateReplication",
                "s3:PutBucketTagging",
                "s3:PutObject",
                "s3:PutObjectTagging",
                "s3:PutObjectVersionTagging",
                "s3:ReplicateDelete",
                "s3:ReplicateObject",
                "s3:ReplicateTags",
                "s3:RestoreObject",
              ],
              "Condition": Object {
                "ArnEquals": Object {
                  "aws:PrincipalArn": Array [
                    "arn:aws:iam::123456789012:role/app-backend",
                  ],
                },
              },
              "Effect": "Allow",
              "Principal": Object {
                "AWS": "*",
              },
              "Resource": Array [
                Object {
                  "Fn::GetAtt": Array [
                    "TestBucketWithMultiAccessSpec04AA3BA7",
                    "Arn",
                  ],
                },
                Object {
                  "Fn::Join": Array [
                    "",
                    Array [
                      Object {
                        "Fn::GetAtt": Array [
                          "TestBucketWithMultiAccessSpec04AA3BA7",
                          "Arn",
                        ],
                      },
                      "/*",
                    ],
                  ],
                },
              ],
              "Sid": "Allow Restricted write-data",
            },
            Object {
              "Action": Array [
                "s3:DeleteObject",
                "s3:DeleteObjectTagging",
                "s3:DeleteObjectVersion",
                "s3:DeleteObjectVersionTagging",
              ],
              "Condition": Object {
                "ArnEquals": Object {
                  "aws:PrincipalArn": Array [
                    "arn:aws:iam::123456789012:role/app-backend",
                  ],
                },
              },
              "Effect": "Allow",
              "Principal": Object {
                "AWS": "*",
              },
              "Resource": Array [
                Object {
                  "Fn::GetAtt": Array [
                    "TestBucketWithMultiAccessSpec04AA3BA7",
                    "Arn",
                  ],
                },
                Object {
                  "Fn::Join": Array [
                    "",
                    Array [
                      Object {
                        "Fn::GetAtt": Array [
                          "TestBucketWithMultiAccessSpec04AA3BA7",
                          "Arn",
                        ],
                      },
                      "/*",
                    ],
                  ],
                },
              ],
              "Sid": "Allow Restricted delete-data",
            },
            Object {
              "Action": "s3:*",
              "Condition": Object {
                "Bool": Object {
                  "aws:SecureTransport": false,
                },
              },
              "Effect": "Deny",
              "Principal": Object {
                "AWS": "*",
              },
              "Resource": Array [
                Object {
                  "Fn::GetAtt": Array [
                    "TestBucketWithMultiAccessSpec04AA3BA7",
                    "Arn",
                  ],
                },
                Object {
                  "Fn::Join": Array [
                    "",
                    Array [
                      Object {
                        "Fn::GetAtt": Array [
                          "TestBucketWithMultiAccessSpec04AA3BA7",
                          "Arn",
                        ],
                      },
                      "/*",
                    ],
                  ],
                },
              ],
              "Sid": "DenyInsecureCommunications",
            },
            Object {
              "Action": Array [
                "s3:PutObject",
                "s3:ReplicateObject",
              ],
              "Condition": Object {
                "Null": Object {
                  "s3:x-amz-server-side-encryption": true,
                },
              },
              "Effect": "Deny",
              "Principal": Object {
                "AWS": "*",
              },
              "Resource": Array [
                Object {
                  "Fn::GetAtt": Array [
                    "TestBucketWithMultiAccessSpec04AA3BA7",
                    "Arn",
                  ],
                },
                Object {
                  "Fn::Join": Array [
                    "",
                    Array [
                      Object {
                        "Fn::GetAtt": Array [
                          "TestBucketWithMultiAccessSpec04AA3BA7",
                          "Arn",
                        ],
                      },
                      "/*",
                    ],
                  ],
                },
              ],
              "Sid": "DenyUnencryptedStorage",
            },
            Object {
              "Action": Array [
                "s3:PutObject",
                "s3:ReplicateObject",
              ],
              "Condition": Object {
                "StringNotEquals": Object {
                  "s3:x-amz-server-side-encryption": "aws:kms",
                },
              },
              "Effect": "Deny",
              "Principal": Object {
                "AWS": "*",
              },
              "Resource": Array [
                Object {
                  "Fn::GetAtt": Array [
                    "TestBucketWithMultiAccessSpec04AA3BA7",
                    "Arn",
                  ],
                },
                Object {
                  "Fn::Join": Array [
                    "",
                    Array [
                      Object {
                        "Fn::GetAtt": Array [
                          "TestBucketWithMultiAccessSpec04AA3BA7",
                          "Arn",
                        ],
                      },
                      "/*",
                    ],
                  ],
                },
              ],
              "Sid": "DenyUnexpectedEncryptionMethod",
            },
            Object {
              "Action": "s3:*",
              "Condition": Object {
                "ArnNotEquals": Object {
                  "aws:PrincipalArn": Array [
                    "arn:aws:iam::139710491120:user/ci",
                    "arn:aws:iam::123456789012:role/app-backend",
                  ],
                },
              },
              "Effect": "Deny",
              "Principal": Object {
                "AWS": Array [
                  "*",
                  "*",
                ],
              },
              "Resource": Array [
                Object {
                  "Fn::GetAtt": Array [
                    "TestBucketWithMultiAccessSpec04AA3BA7",
                    "Arn",
                  ],
                },
                Object {
                  "Fn::Join": Array [
                    "",
                    Array [
                      Object {
                        "Fn::GetAtt": Array [
                          "TestBucketWithMultiAccessSpec04AA3BA7",
                          "Arn",
                        ],
                      },
                      "/*",
                    ],
                  ],
                },
              ],
              "Sid": "DenyEveryoneElse",
            },
          ],
          "Version": "2012-10-17",
        },
      },
      "Type": "AWS::S3::BucketPolicy",
    },
    "TestBucketWithMultiAccessSpec04AA3BA7": Object {
      "DeletionPolicy": "Retain",
      "Type": "AWS::S3::Bucket",
      "UpdateReplacePolicy": "Retain",
    },
  },
}
`;

exports[`K9BucketPolicy - do not enforce KMS encryption at rest when configured off 1`] = `
Object {
  "Resources": Object {
    "S3BucketPolicy189C1E8E": Object {
      "Properties": Object {
        "Bucket": Object {
          "Ref": "TestBucketNoKMSEnforcement64B0442F",
        },
        "PolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": Array [
                "s3:DeleteBucket",
                "s3:DeleteBucketPolicy",
                "s3:DeleteBucketWebsite",
                "s3:ObjectOwnerOverrideToBucketOwner",
                "s3:PutAccelerateConfiguration",
                "s3:PutAnalyticsConfiguration",
                "s3:PutBucketAcl",
                "s3:PutBucketCORS",
                "s3:PutBucketLogging",
                "s3:PutBucketNotification",
                "s3:PutBucketObjectLockConfiguration",
                "s3:PutBucketOwnershipControls",
                "s3:PutBucketPolicy",
                "s3:PutBucketPublicAccessBlock",
                "s3:PutBucketRequestPayment",
                "s3:PutBucketTagging",
                "s3:PutBucketVersioning",
                "s3:PutBucketWebsite",
                "s3:PutEncryptionConfiguration",
                "s3:PutIntelligentTieringConfiguration",
                "s3:PutInventoryConfiguration",
                "s3:PutLifecycleConfiguration",
                "s3:PutMetricsConfiguration",
                "s3:PutObjectAcl",
                "s3:PutObjectLegalHold",
                "s3:PutObjectRetention",
                "s3:PutObjectVersionAcl",
                "s3:PutReplicationConfiguration",
              ],
              "Condition": Object {
                "ArnEquals": Object {
                  "aws:PrincipalArn": Array [
                    "arn:aws:iam::139710491120:user/ci",
                  ],
                },
              },
              "Effect": "Allow",
              "Principal": Object {
                "AWS": "*",
              },
              "Resource": Array [
                Object {
                  "Fn::GetAtt": Array [
                    "TestBucketNoKMSEnforcement64B0442F",
                    "Arn",
                  ],
                },
                Object {
                  "Fn::Join": Array [
                    "",
                    Array [
                      Object {
                        "Fn::GetAtt": Array [
                          "TestBucketNoKMSEnforcement64B0442F",
                          "Arn",
                        ],
                      },
                      "/*",
                    ],
                  ],
                },
              ],
              "Sid": "Allow Restricted administer-resource",
            },
            Object {
              "Action": Array [
                "s3:GetAccelerateConfiguration",
                "s3:GetAnalyticsConfiguration",
                "s3:GetBucketAcl",
                "s3:GetBucketCORS",
                "s3:GetBucketLocation",
                "s3:GetBucketLogging",
                "s3:GetBucketNotification",
                "s3:GetBucketObjectLockConfiguration",
                "s3:GetBucketOwnershipControls",
                "s3:GetBucketPolicy",
                "s3:GetBucketPolicyStatus",
                "s3:GetBucketPublicAccessBlock",
                "s3:GetBucketRequestPayment",
                "s3:GetBucketTagging",
                "s3:GetBucketVersioning",
                "s3:GetBucketWebsite",
                "s3:GetEncryptionConfiguration",
                "s3:GetIntelligentTieringConfiguration",
                "s3:GetInventoryConfiguration",
                "s3:GetLifecycleConfiguration",
                "s3:GetMetricsConfiguration",
                "s3:GetObjectAcl",
                "s3:GetObjectAttributes",
                "s3:GetObjectLegalHold",
                "s3:GetObjectRetention",
                "s3:GetObjectTagging",
                "s3:GetObjectVersionAcl",
                "s3:GetObjectVersionAttributes",
                "s3:GetObjectVersionTagging",
                "s3:GetReplicationConfiguration",
                "s3:ListBucketMultipartUploads",
                "s3:ListBucketVersions",
                "s3:ListMultipartUploadParts",
              ],
              "Condition": Object {
                "ArnEquals": Object {
                  "aws:PrincipalArn": Array [],
                },
              },
              "Effect": "Allow",
              "Principal": Object {
                "AWS": "*",
              },
              "Resource": Array [
                Object {
                  "Fn::GetAtt": Array [
                    "TestBucketNoKMSEnforcement64B0442F",
                    "Arn",
                  ],
                },
                Object {
                  "Fn::Join": Array [
                    "",
                    Array [
                      Object {
                        "Fn::GetAtt": Array [
                          "TestBucketNoKMSEnforcement64B0442F",
                          "Arn",
                        ],
                      },
                      "/*",
                    ],
                  ],
                },
              ],
              "Sid": "Allow Restricted read-config",
            },
            Object {
              "Action": Array [
                "s3:GetObject",
                "s3:GetObjectTorrent",
                "s3:GetObjectVersion",
                "s3:GetObjectVersionForReplication",
                "s3:GetObjectVersionTorrent",
                "s3:ListBucket",
              ],
              "Condition": Object {
                "ArnEquals": Object {
                  "aws:PrincipalArn": Array [
                    "arn:aws:iam::123456789012:role/app-backend",
                    "arn:aws:iam::123456789012:role/customer-service",
                  ],
                },
              },
              "Effect": "Allow",
              "Principal": Object {
                "AWS": "*",
              },
              "Resource": Array [
                Object {
                  "Fn::GetAtt": Array [
                    "TestBucketNoKMSEnforcement64B0442F",
                    "Arn",
                  ],
                },
                Object {
                  "Fn::Join": Array [
                    "",
                    Array [
                      Object {
                        "Fn::GetAtt": Array [
                          "TestBucketNoKMSEnforcement64B0442F",
                          "Arn",
                        ],
                      },
                      "/*",
                    ],
                  ],
                },
              ],
              "Sid": "Allow Restricted read-data",
            },
            Object {
              "Action": Array [
                "s3:AbortMultipartUpload",
                "s3:InitiateReplication",
                "s3:PutBucketTagging",
                "s3:PutObject",
                "s3:PutObjectTagging",
                "s3:PutObjectVersionTagging",
                "s3:ReplicateDelete",
                "s3:ReplicateObject",
                "s3:ReplicateTags",
                "s3:RestoreObject",
              ],
              "Condition": Object {
                "ArnEquals": Object {
                  "aws:PrincipalArn": Array [
                    "arn:aws:iam::123456789012:role/app-backend",
                  ],
                },
              },
              "Effect": "Allow",
              "Principal": Object {
                "AWS": "*",
              },
              "Resource": Array [
                Object {
                  "Fn::GetAtt": Array [
                    "TestBucketNoKMSEnforcement64B0442F",
                    "Arn",
                  ],
                },
                Object {
                  "Fn::Join": Array [
                    "",
                    Array [
                      Object {
                        "Fn::GetAtt": Array [
                          "TestBucketNoKMSEnforcement64B0442F",
                          "Arn",
                        ],
                      },
                      "/*",
                    ],
                  ],
                },
              ],
              "Sid": "Allow Restricted write-data",
            },
            Object {
              "Action": Array [
                "s3:DeleteObject",
                "s3:DeleteObjectTagging",
                "s3:DeleteObjectVersion",
                "s3:DeleteObjectVersionTagging",
              ],
              "Condition": Object {
                "ArnEquals": Object {
                  "aws:PrincipalArn": Array [
                    "arn:aws:iam::139710491120:user/super-admin",
                  ],
                },
              },
              "Effect": "Allow",
              "Principal": Object {
                "AWS": "*",
              },
              "Resource": Array [
                Object {
                  "Fn::GetAtt": Array [
                    "TestBucketNoKMSEnforcement64B0442F",
                    "Arn",
                  ],
                },
                Object {
                  "Fn::Join": Array [
                    "",
                    Array [
                      Object {
                        "Fn::GetAtt": Array [
                          "TestBucketNoKMSEnforcement64B0442F",
                          "Arn",
                        ],
                      },
                      "/*",
                    ],
                  ],
                },
              ],
              "Sid": "Allow Restricted delete-data",
            },
            Object {
              "Action": "s3:*",
              "Condition": Object {
                "Bool": Object {
                  "aws:SecureTransport": false,
                },
              },
              "Effect": "Deny",
              "Principal": Object {
                "AWS": "*",
              },
              "Resource": Array [
                Object {
                  "Fn::GetAtt": Array [
                    "TestBucketNoKMSEnforcement64B0442F",
                    "Arn",
                  ],
                },
                Object {
                  "Fn::Join": Array [
                    "",
                    Array [
                      Object {
                        "Fn::GetAtt": Array [
                          "TestBucketNoKMSEnforcement64B0442F",
                          "Arn",
                        ],
                      },
                      "/*",
                    ],
                  ],
                },
              ],
              "Sid": "DenyInsecureCommunications",
            },
            Object {
              "Action": "s3:*",
              "Condition": Object {
                "ArnNotEquals": Object {
                  "aws:PrincipalArn": Array [
                    "arn:aws:iam::139710491120:user/ci",
                    "arn:aws:iam::123456789012:role/app-backend",
                    "arn:aws:iam::123456789012:role/customer-service",
                    "arn:aws:iam::139710491120:user/super-admin",
                  ],
                },
              },
              "Effect": "Deny",
              "Principal": Object {
                "AWS": Array [
                  "*",
                  "*",
                ],
              },
              "Resource": Array [
                Object {
                  "Fn::GetAtt": Array [
                    "TestBucketNoKMSEnforcement64B0442F",
                    "Arn",
                  ],
                },
                Object {
                  "Fn::Join": Array [
                    "",
                    Array [
                      Object {
                        "Fn::GetAtt": Array [
                          "TestBucketNoKMSEnforcement64B0442F",
                          "Arn",
                        ],
                      },
                      "/*",
                    ],
                  ],
                },
              ],
              "Sid": "DenyEveryoneElse",
            },
          ],
          "Version": "2012-10-17",
        },
      },
      "Type": "AWS::S3::BucketPolicy",
    },
    "TestBucketNoKMSEnforcement64B0442F": Object {
      "DeletionPolicy": "Retain",
      "Type": "AWS::S3::Bucket",
      "UpdateReplacePolicy": "Retain",
    },
  },
}
`;

exports[`K9BucketPolicy - typical usage 1`] = `
Object {
  "Resources": Object {
    "S3BucketPolicy189C1E8E": Object {
      "Properties": Object {
        "Bucket": Object {
          "Ref": "TestBucket560B80BC",
        },
        "PolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": Array [
                "s3:DeleteBucket",
                "s3:DeleteBucketPolicy",
                "s3:DeleteBucketWebsite",
                "s3:ObjectOwnerOverrideToBucketOwner",
                "s3:PutAccelerateConfiguration",
                "s3:PutAnalyticsConfiguration",
                "s3:PutBucketAcl",
                "s3:PutBucketCORS",
                "s3:PutBucketLogging",
                "s3:PutBucketNotification",
                "s3:PutBucketObjectLockConfiguration",
                "s3:PutBucketOwnershipControls",
                "s3:PutBucketPolicy",
                "s3:PutBucketPublicAccessBlock",
                "s3:PutBucketRequestPayment",
                "s3:PutBucketTagging",
                "s3:PutBucketVersioning",
                "s3:PutBucketWebsite",
                "s3:PutEncryptionConfiguration",
                "s3:PutIntelligentTieringConfiguration",
                "s3:PutInventoryConfiguration",
                "s3:PutLifecycleConfiguration",
                "s3:PutMetricsConfiguration",
                "s3:PutObjectAcl",
                "s3:PutObjectLegalHold",
                "s3:PutObjectRetention",
                "s3:PutObjectVersionAcl",
                "s3:PutReplicationConfiguration",
              ],
              "Condition": Object {
                "ArnEquals": Object {
                  "aws:PrincipalArn": Array [
                    "arn:aws:iam::139710491120:user/ci",
                  ],
                },
              },
              "Effect": "Allow",
              "Principal": Object {
                "AWS": "*",
              },
              "Resource": Array [
                Object {
                  "Fn::GetAtt": Array [
                    "TestBucket560B80BC",
                    "Arn",
                  ],
                },
                Object {
                  "Fn::Join": Array [
                    "",
                    Array [
                      Object {
                        "Fn::GetAtt": Array [
                          "TestBucket560B80BC",
                          "Arn",
                        ],
                      },
                      "/*",
                    ],
                  ],
                },
              ],
              "Sid": "Allow Restricted administer-resource",
            },
            Object {
              "Action": Array [
                "s3:GetAccelerateConfiguration",
                "s3:GetAnalyticsConfiguration",
                "s3:GetBucketAcl",
                "s3:GetBucketCORS",
                "s3:GetBucketLocation",
                "s3:GetBucketLogging",
                "s3:GetBucketNotification",
                "s3:GetBucketObjectLockConfiguration",
                "s3:GetBucketOwnershipControls",
                "s3:GetBucketPolicy",
                "s3:GetBucketPolicyStatus",
                "s3:GetBucketPublicAccessBlock",
                "s3:GetBucketRequestPayment",
                "s3:GetBucketTagging",
                "s3:GetBucketVersioning",
                "s3:GetBucketWebsite",
                "s3:GetEncryptionConfiguration",
                "s3:GetIntelligentTieringConfiguration",
                "s3:GetInventoryConfiguration",
                "s3:GetLifecycleConfiguration",
                "s3:GetMetricsConfiguration",
                "s3:GetObjectAcl",
                "s3:GetObjectAttributes",
                "s3:GetObjectLegalHold",
                "s3:GetObjectRetention",
                "s3:GetObjectTagging",
                "s3:GetObjectVersionAcl",
                "s3:GetObjectVersionAttributes",
                "s3:GetObjectVersionTagging",
                "s3:GetReplicationConfiguration",
                "s3:ListBucketMultipartUploads",
                "s3:ListBucketVersions",
                "s3:ListMultipartUploadParts",
              ],
              "Condition": Object {
                "ArnEquals": Object {
                  "aws:PrincipalArn": Array [],
                },
              },
              "Effect": "Allow",
              "Principal": Object {
                "AWS": "*",
              },
              "Resource": Array [
                Object {
                  "Fn::GetAtt": Array [
                    "TestBucket560B80BC",
                    "Arn",
                  ],
                },
                Object {
                  "Fn::Join": Array [
                    "",
                    Array [
                      Object {
                        "Fn::GetAtt": Array [
                          "TestBucket560B80BC",
                          "Arn",
                        ],
                      },
                      "/*",
                    ],
                  ],
                },
              ],
              "Sid": "Allow Restricted read-config",
            },
            Object {
              "Action": Array [
                "s3:GetObject",
                "s3:GetObjectTorrent",
                "s3:GetObjectVersion",
                "s3:GetObjectVersionForReplication",
                "s3:GetObjectVersionTorrent",
                "s3:ListBucket",
              ],
              "Condition": Object {
                "ArnEquals": Object {
                  "aws:PrincipalArn": Array [
                    "arn:aws:iam::123456789012:role/app-backend",
                    "arn:aws:iam::123456789012:role/customer-service",
                  ],
                },
              },
              "Effect": "Allow",
              "Principal": Object {
                "AWS": "*",
              },
              "Resource": Array [
                Object {
                  "Fn::GetAtt": Array [
                    "TestBucket560B80BC",
                    "Arn",
                  ],
                },
                Object {
                  "Fn::Join": Array [
                    "",
                    Array [
                      Object {
                        "Fn::GetAtt": Array [
                          "TestBucket560B80BC",
                          "Arn",
                        ],
                      },
                      "/*",
                    ],
                  ],
                },
              ],
              "Sid": "Allow Restricted read-data",
            },
            Object {
              "Action": Array [
                "s3:AbortMultipartUpload",
                "s3:InitiateReplication",
                "s3:PutBucketTagging",
                "s3:PutObject",
                "s3:PutObjectTagging",
                "s3:PutObjectVersionTagging",
                "s3:ReplicateDelete",
                "s3:ReplicateObject",
                "s3:ReplicateTags",
                "s3:RestoreObject",
              ],
              "Condition": Object {
                "ArnEquals": Object {
                  "aws:PrincipalArn": Array [
                    "arn:aws:iam::123456789012:role/app-backend",
                  ],
                },
              },
              "Effect": "Allow",
              "Principal": Object {
                "AWS": "*",
              },
              "Resource": Array [
                Object {
                  "Fn::GetAtt": Array [
                    "TestBucket560B80BC",
                    "Arn",
                  ],
                },
                Object {
                  "Fn::Join": Array [
                    "",
                    Array [
                      Object {
                        "Fn::GetAtt": Array [
                          "TestBucket560B80BC",
                          "Arn",
                        ],
                      },
                      "/*",
                    ],
                  ],
                },
              ],
              "Sid": "Allow Restricted write-data",
            },
            Object {
              "Action": Array [
                "s3:DeleteObject",
                "s3:DeleteObjectTagging",
                "s3:DeleteObjectVersion",
                "s3:DeleteObjectVersionTagging",
              ],
              "Condition": Object {
                "ArnEquals": Object {
                  "aws:PrincipalArn": Array [
                    "arn:aws:iam::139710491120:user/super-admin",
                  ],
                },
              },
              "Effect": "Allow",
              "Principal": Object {
                "AWS": "*",
              },
              "Resource": Array [
                Object {
                  "Fn::GetAtt": Array [
                    "TestBucket560B80BC",
                    "Arn",
                  ],
                },
                Object {
                  "Fn::Join": Array [
                    "",
                    Array [
                      Object {
                        "Fn::GetAtt": Array [
                          "TestBucket560B80BC",
                          "Arn",
                        ],
                      },
                      "/*",
                    ],
                  ],
                },
              ],
              "Sid": "Allow Restricted delete-data",
            },
            Object {
              "Action": "s3:*",
              "Condition": Object {
                "Bool": Object {
                  "aws:SecureTransport": false,
                },
              },
              "Effect": "Deny",
              "Principal": Object {
                "AWS": "*",
              },
              "Resource": Array [
                Object {
                  "Fn::GetAtt": Array [
                    "TestBucket560B80BC",
                    "Arn",
                  ],
                },
                Object {
                  "Fn::Join": Array [
                    "",
                    Array [
                      Object {
                        "Fn::GetAtt": Array [
                          "TestBucket560B80BC",
                          "Arn",
                        ],
                      },
                      "/*",
                    ],
                  ],
                },
              ],
              "Sid": "DenyInsecureCommunications",
            },
            Object {
              "Action": Array [
                "s3:PutObject",
                "s3:ReplicateObject",
              ],
              "Condition": Object {
                "Null": Object {
                  "s3:x-amz-server-side-encryption": true,
                },
              },
              "Effect": "Deny",
              "Principal": Object {
                "AWS": "*",
              },
              "Resource": Array [
                Object {
                  "Fn::GetAtt": Array [
                    "TestBucket560B80BC",
                    "Arn",
                  ],
                },
                Object {
                  "Fn::Join": Array [
                    "",
                    Array [
                      Object {
                        "Fn::GetAtt": Array [
                          "TestBucket560B80BC",
                          "Arn",
                        ],
                      },
                      "/*",
                    ],
                  ],
                },
              ],
              "Sid": "DenyUnencryptedStorage",
            },
            Object {
              "Action": Array [
                "s3:PutObject",
                "s3:ReplicateObject",
              ],
              "Condition": Object {
                "StringNotEquals": Object {
                  "s3:x-amz-server-side-encryption": "aws:kms",
                },
              },
              "Effect": "Deny",
              "Principal": Object {
                "AWS": "*",
              },
              "Resource": Array [
                Object {
                  "Fn::GetAtt": Array [
                    "TestBucket560B80BC",
                    "Arn",
                  ],
                },
                Object {
                  "Fn::Join": Array [
                    "",
                    Array [
                      Object {
                        "Fn::GetAtt": Array [
                          "TestBucket560B80BC",
                          "Arn",
                        ],
                      },
                      "/*",
                    ],
                  ],
                },
              ],
              "Sid": "DenyUnexpectedEncryptionMethod",
            },
            Object {
              "Action": "s3:*",
              "Condition": Object {
                "ArnNotEquals": Object {
                  "aws:PrincipalArn": Array [
                    "arn:aws:iam::139710491120:user/ci",
                    "arn:aws:iam::123456789012:role/app-backend",
                    "arn:aws:iam::123456789012:role/customer-service",
                    "arn:aws:iam::139710491120:user/super-admin",
                  ],
                },
              },
              "Effect": "Deny",
              "Principal": Object {
                "AWS": Array [
                  "*",
                  "*",
                ],
              },
              "Resource": Array [
                Object {
                  "Fn::GetAtt": Array [
                    "TestBucket560B80BC",
                    "Arn",
                  ],
                },
                Object {
                  "Fn::Join": Array [
                    "",
                    Array [
                      Object {
                        "Fn::GetAtt": Array [
                          "TestBucket560B80BC",
                          "Arn",
                        ],
                      },
                      "/*",
                    ],
                  ],
                },
              ],
              "Sid": "DenyEveryoneElse",
            },
          ],
          "Version": "2012-10-17",
        },
      },
      "Type": "AWS::S3::BucketPolicy",
    },
    "TestBucket560B80BC": Object {
      "DeletionPolicy": "Retain",
      "Type": "AWS::S3::Bucket",
      "UpdateReplacePolicy": "Retain",
    },
  },
}
`;

exports[`K9KeyPolicy Allow root user and Identity policies 1`] = `
Object {
  "Resources": Object {
    "TestKeyAllowRoot30670EF7": Object {
      "DeletionPolicy": "Retain",
      "Properties": Object {
        "KeyPolicy": Object {
          "Statement": Array [
            Object {
              "Action": Array [
                "kms:CancelKeyDeletion",
                "kms:ConnectCustomKeyStore",
                "kms:CreateAlias",
                "kms:CreateCustomKeyStore",
                "kms:CreateGrant",
                "kms:CreateKey",
                "kms:DeleteAlias",
                "kms:DisableKey",
                "kms:DisableKeyRotation",
                "kms:DisconnectCustomKeyStore",
                "kms:EnableKey",
                "kms:EnableKeyRotation",
                "kms:PutKeyPolicy",
                "kms:RetireGrant",
                "kms:RevokeGrant",
                "kms:ScheduleKeyDeletion",
                "kms:TagResource",
                "kms:UntagResource",
                "kms:UpdateAlias",
                "kms:UpdateCustomKeyStore",
                "kms:UpdateKeyDescription",
              ],
              "Condition": Object {
                "ArnEquals": Object {
                  "aws:PrincipalArn": Array [
                    "arn:aws:iam::139710491120:user/ci",
                  ],
                },
              },
              "Effect": "Allow",
              "Principal": Object {
                "AWS": "*",
              },
              "Resource": "*",
              "Sid": "Allow Restricted administer-resource",
            },
            Object {
              "Action": Array [
                "kms:DescribeCustomKeyStores",
                "kms:DescribeKey",
                "kms:GetKeyPolicy",
                "kms:GetKeyRotationStatus",
                "kms:GetParametersForImport",
                "kms:GetPublicKey",
                "kms:ListAliases",
                "kms:ListGrants",
                "kms:ListKeyPolicies",
                "kms:ListKeys",
                "kms:ListResourceTags",
                "kms:ListRetirableGrants",
              ],
              "Condition": Object {
                "ArnEquals": Object {
                  "aws:PrincipalArn": Array [
                    "arn:aws:iam::139710491120:user/ci",
                  ],
                },
              },
              "Effect": "Allow",
              "Principal": Object {
                "AWS": "*",
              },
              "Resource": "*",
              "Sid": "Allow Restricted read-config",
            },
            Object {
              "Action": Array [
                "kms:Decrypt",
                "kms:Verify",
              ],
              "Condition": Object {
                "ArnEquals": Object {
                  "aws:PrincipalArn": Array [
                    "arn:aws:iam::123456789012:role/app-backend",
                    "arn:aws:iam::123456789012:role/customer-service",
                  ],
                },
              },
              "Effect": "Allow",
              "Principal": Object {
                "AWS": "*",
              },
              "Resource": "*",
              "Sid": "Allow Restricted read-data",
            },
            Object {
              "Action": Array [
                "kms:Encrypt",
                "kms:GenerateDataKey",
                "kms:GenerateDataKeyPair",
                "kms:GenerateDataKeyPairWithoutPlaintext",
                "kms:GenerateDataKeyWithoutPlaintext",
                "kms:GenerateRandom",
                "kms:ImportKeyMaterial",
                "kms:ReEncryptFrom",
                "kms:ReEncryptTo",
                "kms:Sign",
              ],
              "Condition": Object {
                "ArnEquals": Object {
                  "aws:PrincipalArn": Array [
                    "arn:aws:iam::123456789012:role/app-backend",
                  ],
                },
              },
              "Effect": "Allow",
              "Principal": Object {
                "AWS": "*",
              },
              "Resource": "*",
              "Sid": "Allow Restricted write-data",
            },
            Object {
              "Action": Array [
                "kms:DeleteCustomKeyStore",
                "kms:DeleteImportedKeyMaterial",
              ],
              "Condition": Object {
                "ArnEquals": Object {
                  "aws:PrincipalArn": Array [
                    "arn:aws:iam::139710491120:user/super-admin",
                  ],
                },
              },
              "Effect": "Allow",
              "Principal": Object {
                "AWS": "*",
              },
              "Resource": "*",
              "Sid": "Allow Restricted delete-data",
            },
            Object {
              "Action": "kms:*",
              "Effect": "Allow",
              "Principal": Object {
                "AWS": Object {
                  "Fn::Join": Array [
                    "",
                    Array [
                      "arn:",
                      Object {
                        "Ref": "AWS::Partition",
                      },
                      ":iam::",
                      Object {
                        "Ref": "AWS::AccountId",
                      },
                      ":root",
                    ],
                  ],
                },
              },
              "Resource": "*",
              "Sid": "Allow Root User to Administer Key And Identity Policies",
            },
            Object {
              "Action": "kms:*",
              "Condition": Object {
                "ArnNotEquals": Object {
                  "aws:PrincipalArn": Array [
                    Object {
                      "Fn::Join": Array [
                        "",
                        Array [
                          "arn:",
                          Object {
                            "Ref": "AWS::Partition",
                          },
                          ":iam::",
                          Object {
                            "Ref": "AWS::AccountId",
                          },
                          ":root",
                        ],
                      ],
                    },
                    "arn:aws:iam::139710491120:user/ci",
                    "arn:aws:iam::123456789012:role/app-backend",
                    "arn:aws:iam::123456789012:role/customer-service",
                    "arn:aws:iam::139710491120:user/super-admin",
                  ],
                },
                "Bool": Object {
                  "aws:PrincipalIsAWSService": Array [
                    "false",
                  ],
                  "kms:GrantIsForAWSResource": Array [
                    "false",
                  ],
                },
              },
              "Effect": "Deny",
              "Principal": Object {
                "AWS": Array [
                  "*",
                  "*",
                ],
              },
              "Resource": "*",
              "Sid": "DenyEveryoneElse",
            },
          ],
          "Version": "2012-10-17",
        },
      },
      "Type": "AWS::KMS::Key",
      "UpdateReplacePolicy": "Retain",
    },
  },
}
`;

exports[`K9KeyPolicy Without Allow root user and Identity policies 1`] = `
Object {
  "Resources": Object {
    "TestKeyNoRoot11647220": Object {
      "DeletionPolicy": "Retain",
      "Properties": Object {
        "KeyPolicy": Object {
          "Statement": Array [
            Object {
              "Action": Array [
                "kms:CancelKeyDeletion",
                "kms:ConnectCustomKeyStore",
                "kms:CreateAlias",
                "kms:CreateCustomKeyStore",
                "kms:CreateGrant",
                "kms:CreateKey",
                "kms:DeleteAlias",
                "kms:DisableKey",
                "kms:DisableKeyRotation",
                "kms:DisconnectCustomKeyStore",
                "kms:EnableKey",
                "kms:EnableKeyRotation",
                "kms:PutKeyPolicy",
                "kms:RetireGrant",
                "kms:RevokeGrant",
                "kms:ScheduleKeyDeletion",
                "kms:TagResource",
                "kms:UntagResource",
                "kms:UpdateAlias",
                "kms:UpdateCustomKeyStore",
                "kms:UpdateKeyDescription",
              ],
              "Condition": Object {
                "ArnEquals": Object {
                  "aws:PrincipalArn": Array [
                    "arn:aws:iam::139710491120:user/ci",
                  ],
                },
              },
              "Effect": "Allow",
              "Principal": Object {
                "AWS": "*",
              },
              "Resource": "*",
              "Sid": "Allow Restricted administer-resource",
            },
            Object {
              "Action": Array [
                "kms:DescribeCustomKeyStores",
                "kms:DescribeKey",
                "kms:GetKeyPolicy",
                "kms:GetKeyRotationStatus",
                "kms:GetParametersForImport",
                "kms:GetPublicKey",
                "kms:ListAliases",
                "kms:ListGrants",
                "kms:ListKeyPolicies",
                "kms:ListKeys",
                "kms:ListResourceTags",
                "kms:ListRetirableGrants",
              ],
              "Condition": Object {
                "ArnEquals": Object {
                  "aws:PrincipalArn": Array [
                    "arn:aws:iam::139710491120:user/ci",
                  ],
                },
              },
              "Effect": "Allow",
              "Principal": Object {
                "AWS": "*",
              },
              "Resource": "*",
              "Sid": "Allow Restricted read-config",
            },
            Object {
              "Action": Array [
                "kms:Decrypt",
                "kms:Verify",
              ],
              "Condition": Object {
                "ArnEquals": Object {
                  "aws:PrincipalArn": Array [
                    "arn:aws:iam::123456789012:role/app-backend",
                    "arn:aws:iam::123456789012:role/customer-service",
                  ],
                },
              },
              "Effect": "Allow",
              "Principal": Object {
                "AWS": "*",
              },
              "Resource": "*",
              "Sid": "Allow Restricted read-data",
            },
            Object {
              "Action": Array [
                "kms:Encrypt",
                "kms:GenerateDataKey",
                "kms:GenerateDataKeyPair",
                "kms:GenerateDataKeyPairWithoutPlaintext",
                "kms:GenerateDataKeyWithoutPlaintext",
                "kms:GenerateRandom",
                "kms:ImportKeyMaterial",
                "kms:ReEncryptFrom",
                "kms:ReEncryptTo",
                "kms:Sign",
              ],
              "Condition": Object {
                "ArnEquals": Object {
                  "aws:PrincipalArn": Array [
                    "arn:aws:iam::123456789012:role/app-backend",
                  ],
                },
              },
              "Effect": "Allow",
              "Principal": Object {
                "AWS": "*",
              },
              "Resource": "*",
              "Sid": "Allow Restricted write-data",
            },
            Object {
              "Action": Array [
                "kms:DeleteCustomKeyStore",
                "kms:DeleteImportedKeyMaterial",
              ],
              "Condition": Object {
                "ArnEquals": Object {
                  "aws:PrincipalArn": Array [
                    "arn:aws:iam::139710491120:user/super-admin",
                  ],
                },
              },
              "Effect": "Allow",
              "Principal": Object {
                "AWS": "*",
              },
              "Resource": "*",
              "Sid": "Allow Restricted delete-data",
            },
          ],
          "Version": "2012-10-17",
        },
      },
      "Type": "AWS::KMS::Key",
      "UpdateReplacePolicy": "Retain",
    },
  },
}
`;

exports[`k9.s3.grantAccessViaResourcePolicy merges permissions for autoDeleteObjects 1`] = `
Object {
  "Resources": Object {
    "AutoDeleteBucket93E032C1": Object {
      "DeletionPolicy": "Delete",
      "Properties": Object {
        "Tags": Array [
          Object {
            "Key": "aws-cdk:auto-delete-objects",
            "Value": "true",
          },
        ],
      },
      "Type": "AWS::S3::Bucket",
      "UpdateReplacePolicy": "Delete",
    },
    "AutoDeleteBucketAutoDeleteObjectsCustomResourceE0861D85": Object {
      "DeletionPolicy": "Delete",
      "DependsOn": Array [
        "AutoDeleteBucketPolicy85D90797",
      ],
      "Properties": Object {
        "BucketName": Object {
          "Ref": "AutoDeleteBucket93E032C1",
        },
        "ServiceToken": Object {
          "Fn::GetAtt": Array [
            "CustomS3AutoDeleteObjectsCustomResourceProviderHandler9D90184F",
            "Arn",
          ],
        },
      },
      "Type": "Custom::S3AutoDeleteObjects",
      "UpdateReplacePolicy": "Delete",
    },
    "AutoDeleteBucketPolicy85D90797": Object {
      "Properties": Object {
        "Bucket": Object {
          "Ref": "AutoDeleteBucket93E032C1",
        },
        "PolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": Array [
                "s3:GetBucket*",
                "s3:List*",
                "s3:DeleteObject*",
              ],
              "Effect": "Allow",
              "Principal": Object {
                "AWS": Object {
                  "Fn::GetAtt": Array [
                    "CustomS3AutoDeleteObjectsCustomResourceProviderRole3B1BD092",
                    "Arn",
                  ],
                },
              },
              "Resource": Array [
                Object {
                  "Fn::GetAtt": Array [
                    "AutoDeleteBucket93E032C1",
                    "Arn",
                  ],
                },
                Object {
                  "Fn::Join": Array [
                    "",
                    Array [
                      Object {
                        "Fn::GetAtt": Array [
                          "AutoDeleteBucket93E032C1",
                          "Arn",
                        ],
                      },
                      "/*",
                    ],
                  ],
                },
              ],
            },
            Object {
              "Action": Array [
                "s3:DeleteBucket",
                "s3:DeleteBucketPolicy",
                "s3:DeleteBucketWebsite",
                "s3:ObjectOwnerOverrideToBucketOwner",
                "s3:PutAccelerateConfiguration",
                "s3:PutAnalyticsConfiguration",
                "s3:PutBucketAcl",
                "s3:PutBucketCORS",
                "s3:PutBucketLogging",
                "s3:PutBucketNotification",
                "s3:PutBucketObjectLockConfiguration",
                "s3:PutBucketOwnershipControls",
                "s3:PutBucketPolicy",
                "s3:PutBucketPublicAccessBlock",
                "s3:PutBucketRequestPayment",
                "s3:PutBucketTagging",
                "s3:PutBucketVersioning",
                "s3:PutBucketWebsite",
                "s3:PutEncryptionConfiguration",
                "s3:PutIntelligentTieringConfiguration",
                "s3:PutInventoryConfiguration",
                "s3:PutLifecycleConfiguration",
                "s3:PutMetricsConfiguration",
                "s3:PutObjectAcl",
                "s3:PutObjectLegalHold",
                "s3:PutObjectRetention",
                "s3:PutObjectVersionAcl",
                "s3:PutReplicationConfiguration",
              ],
              "Condition": Object {
                "ArnEquals": Object {
                  "aws:PrincipalArn": Array [
                    "arn:aws:iam::139710491120:user/ci",
                  ],
                },
              },
              "Effect": "Allow",
              "Principal": Object {
                "AWS": "*",
              },
              "Resource": Array [
                Object {
                  "Fn::GetAtt": Array [
                    "AutoDeleteBucket93E032C1",
                    "Arn",
                  ],
                },
                Object {
                  "Fn::Join": Array [
                    "",
                    Array [
                      Object {
                        "Fn::GetAtt": Array [
                          "AutoDeleteBucket93E032C1",
                          "Arn",
                        ],
                      },
                      "/*",
                    ],
                  ],
                },
              ],
              "Sid": "Allow Restricted administer-resource",
            },
            Object {
              "Action": Array [
                "s3:GetAccelerateConfiguration",
                "s3:GetAnalyticsConfiguration",
                "s3:GetBucketAcl",
                "s3:GetBucketCORS",
                "s3:GetBucketLocation",
                "s3:GetBucketLogging",
                "s3:GetBucketNotification",
                "s3:GetBucketObjectLockConfiguration",
                "s3:GetBucketOwnershipControls",
                "s3:GetBucketPolicy",
                "s3:GetBucketPolicyStatus",
                "s3:GetBucketPublicAccessBlock",
                "s3:GetBucketRequestPayment",
                "s3:GetBucketTagging",
                "s3:GetBucketVersioning",
                "s3:GetBucketWebsite",
                "s3:GetEncryptionConfiguration",
                "s3:GetIntelligentTieringConfiguration",
                "s3:GetInventoryConfiguration",
                "s3:GetLifecycleConfiguration",
                "s3:GetMetricsConfiguration",
                "s3:GetObjectAcl",
                "s3:GetObjectAttributes",
                "s3:GetObjectLegalHold",
                "s3:GetObjectRetention",
                "s3:GetObjectTagging",
                "s3:GetObjectVersionAcl",
                "s3:GetObjectVersionAttributes",
                "s3:GetObjectVersionTagging",
                "s3:GetReplicationConfiguration",
                "s3:ListBucketMultipartUploads",
                "s3:ListBucketVersions",
                "s3:ListMultipartUploadParts",
              ],
              "Condition": Object {
                "ArnEquals": Object {
                  "aws:PrincipalArn": Array [],
                },
              },
              "Effect": "Allow",
              "Principal": Object {
                "AWS": "*",
              },
              "Resource": Array [
                Object {
                  "Fn::GetAtt": Array [
                    "AutoDeleteBucket93E032C1",
                    "Arn",
                  ],
                },
                Object {
                  "Fn::Join": Array [
                    "",
                    Array [
                      Object {
                        "Fn::GetAtt": Array [
                          "AutoDeleteBucket93E032C1",
                          "Arn",
                        ],
                      },
                      "/*",
                    ],
                  ],
                },
              ],
              "Sid": "Allow Restricted read-config",
            },
            Object {
              "Action": Array [
                "s3:GetObject",
                "s3:GetObjectTorrent",
                "s3:GetObjectVersion",
                "s3:GetObjectVersionForReplication",
                "s3:GetObjectVersionTorrent",
                "s3:ListBucket",
              ],
              "Condition": Object {
                "ArnEquals": Object {
                  "aws:PrincipalArn": Array [],
                },
              },
              "Effect": "Allow",
              "Principal": Object {
                "AWS": "*",
              },
              "Resource": Array [
                Object {
                  "Fn::GetAtt": Array [
                    "AutoDeleteBucket93E032C1",
                    "Arn",
                  ],
                },
                Object {
                  "Fn::Join": Array [
                    "",
                    Array [
                      Object {
                        "Fn::GetAtt": Array [
                          "AutoDeleteBucket93E032C1",
                          "Arn",
                        ],
                      },
                      "/*",
                    ],
                  ],
                },
              ],
              "Sid": "Allow Restricted read-data",
            },
            Object {
              "Action": Array [
                "s3:AbortMultipartUpload",
                "s3:InitiateReplication",
                "s3:PutBucketTagging",
                "s3:PutObject",
                "s3:PutObjectTagging",
                "s3:PutObjectVersionTagging",
                "s3:ReplicateDelete",
                "s3:ReplicateObject",
                "s3:ReplicateTags",
                "s3:RestoreObject",
              ],
              "Condition": Object {
                "ArnEquals": Object {
                  "aws:PrincipalArn": Array [],
                },
              },
              "Effect": "Allow",
              "Principal": Object {
                "AWS": "*",
              },
              "Resource": Array [
                Object {
                  "Fn::GetAtt": Array [
                    "AutoDeleteBucket93E032C1",
                    "Arn",
                  ],
                },
                Object {
                  "Fn::Join": Array [
                    "",
                    Array [
                      Object {
                        "Fn::GetAtt": Array [
                          "AutoDeleteBucket93E032C1",
                          "Arn",
                        ],
                      },
                      "/*",
                    ],
                  ],
                },
              ],
              "Sid": "Allow Restricted write-data",
            },
            Object {
              "Action": Array [
                "s3:DeleteObject",
                "s3:DeleteObjectTagging",
                "s3:DeleteObjectVersion",
                "s3:DeleteObjectVersionTagging",
              ],
              "Condition": Object {
                "ArnEquals": Object {
                  "aws:PrincipalArn": Array [
                    "arn:aws:iam::139710491120:user/super-admin",
                  ],
                },
              },
              "Effect": "Allow",
              "Principal": Object {
                "AWS": "*",
              },
              "Resource": Array [
                Object {
                  "Fn::GetAtt": Array [
                    "AutoDeleteBucket93E032C1",
                    "Arn",
                  ],
                },
                Object {
                  "Fn::Join": Array [
                    "",
                    Array [
                      Object {
                        "Fn::GetAtt": Array [
                          "AutoDeleteBucket93E032C1",
                          "Arn",
                        ],
                      },
                      "/*",
                    ],
                  ],
                },
              ],
              "Sid": "Allow Restricted delete-data",
            },
            Object {
              "Action": "s3:*",
              "Condition": Object {
                "Bool": Object {
                  "aws:SecureTransport": false,
                },
              },
              "Effect": "Deny",
              "Principal": Object {
                "AWS": "*",
              },
              "Resource": Array [
                Object {
                  "Fn::GetAtt": Array [
                    "AutoDeleteBucket93E032C1",
                    "Arn",
                  ],
                },
                Object {
                  "Fn::Join": Array [
                    "",
                    Array [
                      Object {
                        "Fn::GetAtt": Array [
                          "AutoDeleteBucket93E032C1",
                          "Arn",
                        ],
                      },
                      "/*",
                    ],
                  ],
                },
              ],
              "Sid": "DenyInsecureCommunications",
            },
            Object {
              "Action": Array [
                "s3:PutObject",
                "s3:ReplicateObject",
              ],
              "Condition": Object {
                "Null": Object {
                  "s3:x-amz-server-side-encryption": true,
                },
              },
              "Effect": "Deny",
              "Principal": Object {
                "AWS": "*",
              },
              "Resource": Array [
                Object {
                  "Fn::GetAtt": Array [
                    "AutoDeleteBucket93E032C1",
                    "Arn",
                  ],
                },
                Object {
                  "Fn::Join": Array [
                    "",
                    Array [
                      Object {
                        "Fn::GetAtt": Array [
                          "AutoDeleteBucket93E032C1",
                          "Arn",
                        ],
                      },
                      "/*",
                    ],
                  ],
                },
              ],
              "Sid": "DenyUnencryptedStorage",
            },
            Object {
              "Action": Array [
                "s3:PutObject",
                "s3:ReplicateObject",
              ],
              "Condition": Object {
                "StringNotEquals": Object {
                  "s3:x-amz-server-side-encryption": "aws:kms",
                },
              },
              "Effect": "Deny",
              "Principal": Object {
                "AWS": "*",
              },
              "Resource": Array [
                Object {
                  "Fn::GetAtt": Array [
                    "AutoDeleteBucket93E032C1",
                    "Arn",
                  ],
                },
                Object {
                  "Fn::Join": Array [
                    "",
                    Array [
                      Object {
                        "Fn::GetAtt": Array [
                          "AutoDeleteBucket93E032C1",
                          "Arn",
                        ],
                      },
                      "/*",
                    ],
                  ],
                },
              ],
              "Sid": "DenyUnexpectedEncryptionMethod",
            },
            Object {
              "Action": "s3:*",
              "Condition": Object {
                "ArnNotEquals": Object {
                  "aws:PrincipalArn": Array [
                    "arn:aws:iam::139710491120:user/ci",
                    "arn:aws:iam::139710491120:user/super-admin",
                    Object {
                      "Fn::GetAtt": Array [
                        "CustomS3AutoDeleteObjectsCustomResourceProviderRole3B1BD092",
                        "Arn",
                      ],
                    },
                  ],
                },
              },
              "Effect": "Deny",
              "Principal": Object {
                "AWS": Array [
                  "*",
                  "*",
                ],
              },
              "Resource": Array [
                Object {
                  "Fn::GetAtt": Array [
                    "AutoDeleteBucket93E032C1",
                    "Arn",
                  ],
                },
                Object {
                  "Fn::Join": Array [
                    "",
                    Array [
                      Object {
                        "Fn::GetAtt": Array [
                          "AutoDeleteBucket93E032C1",
                          "Arn",
                        ],
                      },
                      "/*",
                    ],
                  ],
                },
              ],
              "Sid": "DenyEveryoneElse",
            },
          ],
          "Version": "2012-10-17",
        },
      },
      "Type": "AWS::S3::BucketPolicy",
    },
    "CustomS3AutoDeleteObjectsCustomResourceProviderHandler9D90184F": Object {
      "DependsOn": Array [
        "CustomS3AutoDeleteObjectsCustomResourceProviderRole3B1BD092",
      ],
      "Properties": Object {
        "Code": Object {
          "S3Bucket": Object {
            "Fn::Sub": "cdk-hnb659fds-assets-\${AWS::AccountId}-\${AWS::Region}",
          },
          "S3Key": "1f7e277bd526ebce1983fa1e7a84a5281ec533d9187caaebb773681bbf7bf4c1.zip",
        },
        "Description": Object {
          "Fn::Join": Array [
            "",
            Array [
              "Lambda function for auto-deleting objects in ",
              Object {
                "Ref": "AutoDeleteBucket93E032C1",
              },
              " S3 bucket.",
            ],
          ],
        },
        "Handler": "__entrypoint__.handler",
        "MemorySize": 128,
        "Role": Object {
          "Fn::GetAtt": Array [
            "CustomS3AutoDeleteObjectsCustomResourceProviderRole3B1BD092",
            "Arn",
          ],
        },
        "Runtime": "nodejs12.x",
        "Timeout": 900,
      },
      "Type": "AWS::Lambda::Function",
    },
    "CustomS3AutoDeleteObjectsCustomResourceProviderRole3B1BD092": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": Array [
          Object {
            "Fn::Sub": "arn:\${AWS::Partition}:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
  },
}
`;
